atualização visual do app e adição de novas utilidades

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mapnet",
+    "name": "MapNetwork",
     "slug": "mapnet",
     "version": "1.0.0",
     "orientation": "portrait",
